--- a/Taylor/Home_Hero/home.html
+++ b/Taylor/Home_Hero/home.html
@@ -19,36 +19,36 @@
   <!-- LOADING FONTS AND ICONS -->
   <link href="http://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet" property="stylesheet" type="text/css" media="all">
 
-  <link rel="stylesheet" type="text/css" href="../../revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
-  <link rel="stylesheet" type="text/css" href="../../revolution/fonts/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/fonts/font-awesome/css/font-awesome.css">
 
   <!-- REVOLUTION STYLE SHEETS -->
-  <link rel="stylesheet" type="text/css" href="../../revolution/css/settings.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/css/settings.css">
   <!-- REVOLUTION LAYERS STYLES -->
 
 
-  <link rel="stylesheet" type="text/css" href="../../revolution/css/layers.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/css/layers.css">
 
   <!-- REVOLUTION NAVIGATION STYLES -->
-  <link rel="stylesheet" type="text/css" href="../../revolution/css/navigation.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/css/navigation.css">
 
   <!-- FONT AND STYLE FOR BASIC DOCUMENTS, NO NEED FOR FURTHER USAGE IN YOUR PROJECTS-->
   <link href="http://fonts.googleapis.com/css?family=Roboto%3A700%2C300" rel="stylesheet" property="stylesheet" type="text/css" media="all" />
-  <link rel="stylesheet" type="text/css" href="../../assets/css/noneed.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/assets/css/noneed.css">
   <!-- REVOLUTION JS FILES -->
-  <script type="text/javascript" src="../../revolution/js/jquery.themepunch.tools.min.js"></script>
-  <script type="text/javascript" src="../../revolution/js/jquery.themepunch.revolution.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/js/jquery.themepunch.tools.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/js/jquery.themepunch.revolution.min.js"></script>
 
   <!-- SLIDER REVOLUTION 5.0 EXTENSIONS  (Load Extensions only on Local File Systems !  The following part can be removed on Server for On Demand Loading) -->
-  <script type="text/javascript" src="../../revolution/js/extensions/revolution.extension.actions.min.js"></script>
-  <script type="text/javascript" src="../../revolution/js/extensions/revolution.extension.carousel.min.js"></script>
-  <script type="text/javascript" src="../../revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
-  <script type="text/javascript" src="../../revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
-  <script type="text/javascript" src="../../revolution/js/extensions/revolution.extension.migration.min.js"></script>
-  <script type="text/javascript" src="../../revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-  <script type="text/javascript" src="../../revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-  <script type="text/javascript" src="../../revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
-  <script type="text/javascript" src="../../revolution/js/extensions/revolution.extension.video.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/js/extensions/revolution.extension.actions.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/js/extensions/revolution.extension.migration.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/revolution/js/extensions/revolution.extension.video.min.js"></script>
   <script type="text/javascript">function setREVStartSize(e){
     try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0,f=0,s=0,h=0;
       if(e.responsiveLevels&&(jQuery.each(e.responsiveLevels,function(e,f){f>i&&(t=r=f,l=e),i>f&&f>r&&(r=f,n=e)}),t>r&&(l=n)),f=e.gridheight[l]||e.gridheight[0]||e.gridheight,s=e.gridwidth[l]||e.gridwidth[0]||e.gridwidth,h=i/s,h=h>1?1:h,f=Math.round(h*f),"fullscreen"==e.sliderLayout){var u=(e.c.width(),jQuery(window).height());if(void 0!=e.fullScreenOffsetContainer){var c=e.fullScreenOffsetContainer.split(",");if (c) jQuery.each(c,function(e,i){u=jQuery(i).length>0?u-jQuery(i).outerHeight(!0):u}),e.fullScreenOffset.split("%").length>1&&void 0!=e.fullScreenOffset&&e.fullScreenOffset.length>0?u-=jQuery(window).height()*parseInt(e.fullScreenOffset,0)/100:void 0!=e.fullScreenOffset&&e.fullScreenOffset.length>0&&(u-=parseInt(e.fullScreenOffset,0))}f=u}else void 0!=e.minHeight&&f<e.minHeight&&(f=e.minHeight);e.c.closest(".rev_slider_wrapper").css({height:f})
@@ -95,7 +95,7 @@
         <ul>	<!-- SLIDE  -->
           <li data-index="rs-967" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
             <!-- MAIN IMAGE -->
-            <img src="../../assets/images/transparent.png" data-bgcolor='#fff' style='background:#fff' alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
+            <img src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/assets/images/transparent.png" data-bgcolor='#fff' style='background:#fff' alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
             <!-- LAYERS -->
 
             <!-- LAYER NR. 1 -->
@@ -548,7 +548,7 @@
 
                  data-type="svg"
                  data-actions='[{"event":"click","action":"scrollbelow","offset":"px","delay":"","speed":"1500","ease":"Power4.easeOut"}]'
-                 data-svg_src="../../assets/images/ic_arrow_downward_24px.svg"
+                 data-svg_src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/assets/images/ic_arrow_downward_24px.svg"
                  data-svg_idle="sc:transparent;sw:0;sda:0;sdo:0;"
                  data-basealign="slide"
                  data-responsive_offset="on"
@@ -729,6 +729,6 @@
 
   </article>
 </section>
-<script type="text/javascript" src="../../assets/warning.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/taylor-corperation/Slider-revolution@main/assets/warning.js"></script>
 </body>
 </html>
