assets added image added

--- a/Taylor/Home_Hero/home.html
+++ b/Taylor/Home_Hero/home.html
@@ -117,7 +117,7 @@
                  data-paddingbottom="[0,0,0,0]"
                  data-paddingleft="[0,0,0,0]"
 
-                 style="z-index: 5;"><img src="https://f.hubspotusercontent20.net/hubfs/6858527/1-Taylor.com/Home%20page/Hero-parallax/buisenss-identity-kecks.png" alt="" data-ww="['410px','55px','55px','56px']" data-hh="220" width="919" height="445" data-no-retina> </div>
+                 style="z-index: 5;"><img src="https://www.taylor.com/hubfs/1-Taylor.com/Home%20page/Hero-parallax/buisenss-identity-kecks.png" alt="" data-ww="['410px','55px','55px','56px']" data-hh="220" width="919" height="445" data-no-retina> </div>
 
             <!-- LAYER NR. 2 -->
             <div class="tp-caption   tp-resizeme rs-parallaxlevel-1"
@@ -138,7 +138,7 @@
                  data-paddingbottom="[0,0,0,0]"
                  data-paddingleft="[0,0,0,0]"
 
-                 style="z-index: 6;"><img src="https://f.hubspotusercontent20.net/hubfs/6858527/Taylor.com/Home%20page/Hero-parallax/promo-pen.png" alt="" data-ww="['450px','450px','300px','265px']" data-hh="['123px','123px','34px','30px']" width="530" height="60" data-no-retina> </div>
+                 style="z-index: 6;"><img src="https://www.taylor.com/hubfs/1-Taylor.com/Home%20page/Hero-parallax/promo-pen.png" alt="" data-ww="['450px','450px','300px','265px']" data-hh="['123px','123px','34px','30px']" width="530" height="60" data-no-retina> </div>
 
             <!-- LAYER NR. 3 -->
             <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme  tp-joyshadow rs-parallaxlevel-15"
@@ -224,7 +224,7 @@
                  data-paddingbottom="[0,0,0,0]"
                  data-paddingleft="[0,0,0,0]"
 
-                 style="z-index: 10;"><img src="https://f.hubspotusercontent20.net/hubfs/6858527/Taylor.com/Home%20page/Hero-parallax/customer-communications-mgmt.png" alt="" data-ww="['300px','300px','150px','150px']" data-hh="['444px','444px','200','200px']" width="300" height="400" data-no-retina> </div>
+                 style="z-index: 10;"><img src="https://www.taylor.com/hubfs/1-Taylor.com/Home%20page/Hero-parallax/customer-communications-mgmt.png" alt="" data-ww="['300px','300px','150px','150px']" data-hh="['444px','444px','200','200px']" width="300" height="400" data-no-retina> </div>
 
             <!-- LAYER NR. 7 -->
             <div class="tp-caption   tp-resizeme rs-parallaxlevel-1"
@@ -245,7 +245,7 @@
                  data-paddingbottom="[0,0,0,0]"
                  data-paddingleft="[0,0,0,0]"
 
-                 style="z-index: 11;"><img src="https://f.hubspotusercontent20.net/hubfs/6858527/Taylor.com/Home%20page/Hero-parallax/square-diagonal-lines.png" alt="" data-ww="['230px','230px','20%','165px']" data-hh="['130px','130px','130px','93px']" width="230" height="130" data-no-retina> </div>
+                 style="z-index: 11;"><img src="https://www.taylor.com/hubfs/1-Taylor.com/Home%20page/Hero-parallax/square-diagonal-lines.png" alt="" data-ww="['230px','230px','20%','165px']" data-hh="['130px','130px','130px','93px']" width="230" height="130" data-no-retina> </div>
 
             <!-- LAYER NR. 8 -->
             <div class="hero-content tp-caption tp-shape tp-shapewrapper  tp-resizeme rs-parallaxlevel-2"
@@ -381,7 +381,7 @@
                  data-paddingbottom="[0,0,0,0]"
                  data-paddingleft="[0,0,0,0]"
 
-                 style="z-index: 17;"><img src="https://f.hubspotusercontent20.net/hubfs/6858527/Taylor.com/Home%20page/Hero-parallax/commercial-print-annual-report.png" alt="" data-ww="['850px','650px','400px','355px']" data-hh="['564px','464px','355px','315px']" width="710" height="630" data-no-retina> </div>
+                 style="z-index: 17;"><img src="https://www.taylor.com/hubfs/1-Taylor.com/Home%20page/Hero-parallax/commercial-print-annual-report.png" alt="" data-ww="['850px','650px','400px','355px']" data-hh="['564px','464px','355px','315px']" width="710" height="630" data-no-retina> </div>
 
             <!-- LAYER NR. 14 -->
             <div class="tp-caption   tp-resizeme rs-parallaxlevel-3"
@@ -402,7 +402,7 @@
                  data-paddingbottom="[0,0,0,0]"
                  data-paddingleft="[0,0,0,0]"
 
-                 style="z-index: 18;"><img src="https://f.hubspotusercontent20.net/hubfs/6858527/Taylor.com/Home%20page/Hero-parallax/sphere-gradient.png" alt="" data-ww="['250px','170px','350px','250px']" data-hh="['250px','170px','119px','85px']" width="500" height="170" data-no-retina> </div>
+                 style="z-index: 18;"><img src="https://www.taylor.com/hubfs/1-Taylor.com/Home%20page/Hero-parallax/sphere-gradient.png" alt="" data-ww="['250px','170px','350px','250px']" data-hh="['250px','170px','119px','85px']" width="500" height="170" data-no-retina> </div>
 
             <!-- LAYER NR. 15 -->
             <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme rs-parallaxlevel-10"
@@ -445,7 +445,7 @@
                  data-paddingbottom="[0,0,0,0]"
                  data-paddingleft="[0,0,0,0]"
 
-                 style="z-index: 20;"><img src="https://f.hubspotusercontent20.net/hubfs/6858527/Taylor.com/Home%20page/Hero-parallax/promo-cap.png" alt="" data-ww="['520px','450px','200px','160px']" data-hh="['','276px','281px','225px']" width="734" height="450" data-no-retina> </div>
+                 style="z-index: 20;"><img src="https://www.taylor.com/hubfs/1-Taylor.com/Home%20page/Hero-parallax/promo-cap.png" alt="" data-ww="['520px','450px','200px','160px']" data-hh="['','276px','281px','225px']" width="734" height="450" data-no-retina> </div>
 
             <!-- LAYER NR. 17 -->
             <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme rs-parallaxlevel-10"
@@ -488,7 +488,7 @@
                  data-paddingbottom="[0,0,0,0]"
                  data-paddingleft="[0,0,0,0]"
 
-                 style="z-index: 22;"><img src="https://f.hubspotusercontent20.net/hubfs/6858527/Taylor.com/Home%20page/Hero-parallax/labels-tomato-sauce-jar.png" alt="" data-ww="['390px','390px','250px','195px']" data-hh="['359px','359px','397px','310px']" width="390" height="620" data-no-retina> </div>
+                 style="z-index: 22;"><img src="https://www.taylor.com/hubfs/1-Taylor.com/Home%20page/Hero-parallax/labels-tomato-sauce-jar.png" alt="" data-ww="['390px','390px','250px','195px']" data-hh="['359px','359px','397px','310px']" width="390" height="620" data-no-retina> </div>
 
             <!-- LAYER NR. 19 -->
             <a class="tp-caption rev-btn  tp-resizeme  tp-joyshadow"
@@ -605,7 +605,7 @@
                  data-paddingleft="[0,0,0,0]"
 
                  style="z-index: 27;">
-              <div class="rs-looped rs-wave"  data-speed="7" data-angle="0" data-radius="5px" data-origin="50% 50%"><img src="https://f.hubspotusercontent20.net/hubfs/6858527/1-Taylor.com/Home%20page/Hero-parallax/ZigZag.png" alt="" data-ww="['200px','336px','336px','336px']" data-hh="['42px','71px','71px','71px']" width="221" height="191" data-no-retina> </div></div>
+              <div class="rs-looped rs-wave"  data-speed="7" data-angle="0" data-radius="5px" data-origin="50% 50%"><img src="https://www.taylor.com/hubfs/1-Taylor.com/Home%20page/Hero-parallax/ZigZag.png" alt="" data-ww="['200px','336px','336px','336px']" data-hh="['42px','71px','71px','71px']" width="221" height="191" data-no-retina> </div></div>
 
             <!-- LAYER NR. 24 -->
             <div class="tp-caption   tp-resizeme rs-parallaxlevel-12"
@@ -627,7 +627,7 @@
                  data-paddingleft="[0,0,0,0]"
 
                  style="z-index: 0;">
-              <div class="rs-looped rs-wave"  data-speed="6" data-angle="0" data-radius="6px" data-origin="50% 50%"><img src="https://f.hubspotusercontent20.net/hubfs/6858527/Taylor.com/Home%20page/Hero-parallax/square-dots.png" alt="" data-ww="['221px','221px','1221px','221px']" data-hh="['191px','191px','191px','191px']" width="221" height="191" data-no-retina> </div></div>
+              <div class="rs-looped rs-wave"  data-speed="6" data-angle="0" data-radius="6px" data-origin="50% 50%"><img src="https://www.taylor.com/hubfs/1-Taylor.com/Home%20page/Hero-parallax/square-dots.png" alt="" data-ww="['221px','221px','1221px','221px']" data-hh="['191px','191px','191px','191px']" width="221" height="191" data-no-retina> </div></div>
 
             <!-- LAYER NR. 25 -->
             <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme rs-parallaxlevel-12"
